# CartonLedger

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/app/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/core/: AppSettings.cpp  AppSettings.h  CalculationService.cpp  CalculationService.h  StatementEntry.h
src/data/: DatabaseManager.cpp  DatabaseManager.h  EntryRepository.cpp  EntryRepository.h
src/export/: EntryExportFormatter.cpp  EntryExportFormatter.h  ExcelExporter.cpp  ExcelExporter.h
src/ui/: PasteColumnResolver.cpp  PasteColumnResolver.h
src/ui/commands/: ModelStateCommand.cpp  ModelStateCommand.h
src/ui/delegates/: FormulaTypeDelegate.cpp  FormulaTypeDelegate.h  SpecificationDelegate.cpp  SpecificationDelegate.h
src/ui/models/: EntryTableModel.cpp  EntryTableModel.h
tests/: CMakeLists.txt  test_calculation.cpp  test_entry_repository.cpp  test_entry_table_model.cpp  test_exporters.cpp
